kubernetes/apps/observability/victoria-logs/networkpolicys/observability-victoria-logs-allow-eg-to-coredns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-victoria-logs-allow-eg-to-coredns
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs-single
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
