kubernetes/apps/observability/victoria-logs/networkpolicys/observability-victoria-logs-allow-ig-from-envoy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-victoria-logs-allow-ig-from-envoy-gateway
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs-single
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
      - podSelector:
          matchLabels:
            helm.toolkit.fluxcd.io/name: envoy-gateway
      ports:
      - protocol: TCP
        port: 9428
