kubernetes/apps/observability/victoria-logs/networkpolicys/observability-victoria-logs-allow-ig-from-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: observability-victoria-logs-allow-ig-from-host
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs-single
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - protocol: TCP
              port: "9428"
