kubernetes/apps/observability/victoria-logs/networkpolicys/observability-victoria-logs-ig-from-fluent-bit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-victoria-logs-ig-from-fluent-bit
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-logs-single
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: observability
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fluent-bit
    ports:
    - protocol: TCP
      port: 9428
